# timecard

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  install.ps1  install.sh  pyproject.toml  timecard-spec.md
docs/: ROADMAP.md  mcp.md
tests/: test_cli.py  test_config.py  test_db.py  test_integration.py  test_invoice.py  test_mcp_server.py  test_models.py  test_sync.py  test_timer.py
timecard/: __init__.py  __main__.py  cli.py  config.py  db.py  export.py  invoice.py  mcp_server.py  models.py  sync.py  timer.py
timecard/templates/: invoice.html
